# CV

./: .gitignore  André_M._Silva_CV copy.yaml  André_M._Silva_CV.yaml  CV.typ  CoAuthor.bib  Education.yaml  Employment.yaml  Grants.yaml  Makefile  Organization.yaml  Outreach.yaml  Posters.yaml  Publications.yaml  Selected.yaml  Skills.yaml  Supervision.tex  Supervision.yaml  Teaching.tex  awards.yaml  coAuthor.yaml  committees.tex  construct_CV.py  cv-llt.bbl-SAVE-ERROR  cv-llt.bcf-SAVE-ERROR  cv-llt.tex  cv.tex  dates.bib  dictionary.tex  education.tex  employment.tex  first_author.bib  first_author.yaml  firstauthor.bib  funding.tex  generate_co_author_cmds.py  generate_publication_file.py  grant.tex  hello.py  misc.tex  other.bib  (+14 more)
.github/workflows/: build_pdf.yaml
rendercv_output/: André_M._Silva_CV.html  André_M._Silva_CV.md  André_M._Silva_CV.typ
scripts/: CoAuthor.bib  Selected.bib  first_author.bib  generate_publication_file.py  generate_supervision.py  posters.bib  supervision.json  teste.tex
